# leptos_portfolio_admin

./: .dockerignore  .env copy  .env-example  .gitignore  Cargo.toml  LICENSE  README.md  docker-compose.yml  dockerfile  history.txt  leptos.toml  tailwind.config.js  test.html  vercel.json
.cargo/: config.toml
assets/: localstorage.js  pre-suggest.json  tinymce-integration.js
public/: snow.js  utils.js
site/: _routes.json
src/: app.rs  lib.rs  main.rs
src/app/: components.rs  icons.rs  models.rs  pages.rs  server.rs  utils.rs
src/app/components/: access_mode.rs  chat.rs  checkbox.rs  contact.rs  dialog.rs  dropdown_icon.rs  edit_contact.rs  edit_menu.rs  edit_tabs.rs  education.rs  experience.rs  forms.rs  home_contact.rs  icon_dropdown.rs  image_slider.rs  input.rs  input_array.rs  language_chip.rs  layouts.rs  loading.rs  loading_intro.rs  pdf.rs  portfolio.rs  profile_fields.rs  records.rs  render_tab.rs  skill_chip.rs  skills_chip.rs  tab.rs  text_editor.rs  text_editor2.rs  textarea.rs  theme.rs  toast.rs  topbar.rs  utils.rs
src/app/components/agents/: chat.rs
src/app/components/edit_tabs/: contact_tab.rs  education_tab.rs  experience_tab.rs  language_tab.rs  portfolio_tab.rs  skill_tab.rs
src/app/components/forms/: checkbox.rs  edit_contact.rs  icon_dropdown.rs  input.rs  input_array.rs  text_editor.rs
src/app/components/forms/form_tabs/: contact_tab.rs  education_tab.rs  experience_tab.rs  language_tab.rs  portfolio_tab.rs  skill_tab.rs
src/app/components/layouts/: dialog.rs  home_tabs.rs  tab_render.rs  topbar.rs
src/app/components/provider/: toast.rs
src/app/components/records/: contact.rs  education.rs  experience.rs  language.rs  portfolio.rs  skill.rs
src/app/components/utils/: access_mode.rs  image_slider.rs  intro.rs  lock_dialog.rs  pdf.rs  toast.rs
src/app/constants/: constant.rs
src/app/icons/: astro.rs  cloud.rs  cloudsnow.rs  code.rs  csharp.rs  discord.rs  dotnet.rs  flask.rs  github.rs  home.rs  instagram.rs  js.rs  mail.rs  moon.rs  mysql.rs  newspaper.rs  next.rs  node.rs  paypal.rs  python.rs  react.rs  rust.rs  sqlite.rs  sun.rs  telegram.rs  ts.rs  twitter.rs
src/app/models/: config.rs  portfolio.rs  profile.rs  server.rs
src/app/pages/: chat_page.rs  edit_page.rs  home_page.rs  tab_page.rs
src/app/server/: api.rs  database.rs  redis.rs
src/app/utils/: pdf_template.rs  utils.rs
style/: main.css
surreal/: script  script.txt
